# pi-assistant

./: .gitignore  README.md  config.toml  install.sh  mcp.json  pi-assistant.service  pyproject.toml
src/pi_assistant/: __init__.py  app.py  audio.py  chat.py  config.py  gating.py  main.py  mcp.py  stt.py  tts.py  utils.py  wake.py
