[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pi-assistant"
version = "0.6.0"
description = "Wake-word voice assistant with local Whisper and MCP tools."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Paul Jordan"}]
dependencies = [
  "ctranslate2",
  "faster-whisper",
  "numpy",
  "requests",
  "sounddevice",
  "websocket-client",
  "tomli; python_version < '3.11'",
]

[project.scripts]
pi-assistant = "pi_assistant.main:main"

[tool.hatch.build]
packages = ["src/pi_assistant"]

[tool.hatch.build.targets.wheel]
packages = ["src/pi_assistant"]
